# algebra-gacha

./: .gitignore  Cargo.toml  Trunk.toml  index.html
assets/: style.css
docs/: algebra-gacha-5001071a1510f8b5.js  algebra-gacha-5001071a1510f8b5_bg.wasm  algebra-gacha-de919c48acd7ba59_bg.wasm  algebra-gacha-ef3cceeb2e144a47.js  algebra-gacha-ef3cceeb2e144a47_bg.wasm  index.html
src/: app.rs  gacha.rs  katex.rs  main.rs
src/components/: footer.rs  gacha_button.rs  header.rs  mod.rs  problem_card.rs
src/problems/: grade_1.rs  grade_2.rs  grade_3.rs  mod.rs
src/problems/grade_3/: easy.rs  hard.rs  helpers.rs  medium.rs  mod.rs  ultra.rs
