[package]
name = "algebra-gacha"
version = "0.2.0"
edition = "2024"

[dependencies]
getrandom = { version = "0.2.0", features = ["js"] }
gloo = "0.11.0"
js-sys = "0.3.91"
rand = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["v4", "js"] }
wasm-bindgen = "0.2.114"
web-sys = { version = "0.3", features = ["HtmlDetailsElement"] }
yew = { version = "0.23.0", features = ["csr"] }
